fix background image zooming in whilescrolling on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@
   height: 100vh;
   background: url(../images/tools.jpg) no-repeat bottom right fixed;
   background-size: cover;
+  overflow-y: scroll;
 }
 
 .business-info {
